# MDCustomR

./: .gitignore  DESCRIPTION  Dockerfile  MDCustomR.Rproj  NAMESPACE  README.Rmd  README.md  README.qmd  dependencies.R  install.R  process.R  process_r.py  pyproject.toml
.buildkite/: pipeline.yaml
.notes/: deploy_api.py
R/: transformIntensities.R
data/: bojkova2020.rda
infra/helm/md-custom-r/: Chart.yaml  values.yaml
infra/helm/md-custom-r/environments/: dev-values.yaml  development-values.yaml
infra/helm/md-custom-r/templates/: deploy.yaml
man/: convertNAToStrings.Rd  transformIntensities.Rd
scripts/: build-push  deploy  ecr-repository-policy.json
src/md_custom_r/: hello.R  process.R  process_r.py
src/md_custom_r.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: testthat.R
tests/testthat/: test-transformIntensities.R
tutorial/: setup-r-package.Rmd  test-process-r.ipynb
