[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Anna Quaglieri", email = "anna@massdynamics.com" },
    { name = "Brendan Spinks", email = "brendan@massdynamics.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "md_dataset @ git+https://github.com/MassDynamics/md_dataset@v0.3.7-93"
]
description = "This project is an example for setting up a new custom R workflow integrated into the Mass Dynamics ecosystem."
keywords = [""]
license = {file = "LICENSE"}
name = "md_custom_r"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
version = "0.1.1"
